@@ -1,5 +1,11 @@
 2012-05-10  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* util/grub-menulst2cfg.c (main): Check return value of fwrite.
+	* util/grub-mklayout.c (write_file): Likewise. New argument fname.
+	Allusers updated.
+
+2012-05-10  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* util/grub.d/20_linux_xen.in: Update initrd list based on 10_linux.in
 	counterpart.
 
